--- a/Project_Code_for_GUI.ipynb
+++ b/Project_Code_for_GUI.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -19,22 +19,14 @@
         "id": "BWSgv5m76kMD",
         "outputId": "3a49e879-8e0e-47c9-afb8-2208fbdb8992"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "CNN_v1.ckpt  drive  file.wav  recording.webm  requirements.txt\tsample_data\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!ls"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": null,
       "metadata": {
         "id": "-Z2URWqX8Wd6"
       },
@@ -55,75 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Sp_izuI-cSp_",
-        "outputId": "9a1ee3e8-95b3-4a60-dd78-08dac27c16ea"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: pytorch-lightning in /usr/local/lib/python3.7/dist-packages (1.6.1)\n",
-            "Requirement already satisfied: torchmetrics>=0.4.1 in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning) (0.8.0)\n",
-            "Requirement already satisfied: tqdm>=4.41.0 in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning) (4.64.0)\n",
-            "Requirement already satisfied: tensorboard>=2.2.0 in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning) (2.8.0)\n",
-            "Requirement already satisfied: torch>=1.8.* in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning) (1.10.0+cu111)\n",
-            "Requirement already satisfied: packaging>=17.0 in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning) (21.3)\n",
-            "Requirement already satisfied: fsspec[http]!=2021.06.0,>=2021.05.0 in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning) (2022.3.0)\n",
-            "Requirement already satisfied: PyYAML>=5.4 in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning) (6.0)\n",
-            "Requirement already satisfied: pyDeprecate<0.4.0,>=0.3.1 in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning) (0.3.2)\n",
-            "Requirement already satisfied: typing-extensions>=4.0.0 in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning) (4.1.1)\n",
-            "Requirement already satisfied: numpy>=1.17.2 in /usr/local/lib/python3.7/dist-packages (from pytorch-lightning) (1.21.6)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning) (2.23.0)\n",
-            "Requirement already satisfied: aiohttp in /usr/local/lib/python3.7/dist-packages (from fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning) (3.8.1)\n",
-            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging>=17.0->pytorch-lightning) (3.0.8)\n",
-            "Requirement already satisfied: setuptools>=41.0.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning) (57.4.0)\n",
-            "Requirement already satisfied: protobuf>=3.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning) (3.17.3)\n",
-            "Requirement already satisfied: absl-py>=0.4 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning) (1.0.0)\n",
-            "Requirement already satisfied: tensorboard-data-server<0.7.0,>=0.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning) (0.6.1)\n",
-            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning) (3.3.6)\n",
-            "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning) (0.4.6)\n",
-            "Requirement already satisfied: google-auth<3,>=1.6.3 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning) (1.35.0)\n",
-            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning) (1.0.1)\n",
-            "Requirement already satisfied: wheel>=0.26 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning) (0.37.1)\n",
-            "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning) (1.8.1)\n",
-            "Requirement already satisfied: grpcio>=1.24.3 in /usr/local/lib/python3.7/dist-packages (from tensorboard>=2.2.0->pytorch-lightning) (1.44.0)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from absl-py>=0.4->tensorboard>=2.2.0->pytorch-lightning) (1.15.0)\n",
-            "Requirement already satisfied: rsa<5,>=3.1.4 in /usr/local/lib/python3.7/dist-packages (from google-auth<3,>=1.6.3->tensorboard>=2.2.0->pytorch-lightning) (4.8)\n",
-            "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.7/dist-packages (from google-auth<3,>=1.6.3->tensorboard>=2.2.0->pytorch-lightning) (0.2.8)\n",
-            "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from google-auth<3,>=1.6.3->tensorboard>=2.2.0->pytorch-lightning) (4.2.4)\n",
-            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.7/dist-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard>=2.2.0->pytorch-lightning) (1.3.1)\n",
-            "Requirement already satisfied: importlib-metadata>=4.4 in /usr/local/lib/python3.7/dist-packages (from markdown>=2.6.8->tensorboard>=2.2.0->pytorch-lightning) (4.11.3)\n",
-            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.4->markdown>=2.6.8->tensorboard>=2.2.0->pytorch-lightning) (3.8.0)\n",
-            "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /usr/local/lib/python3.7/dist-packages (from pyasn1-modules>=0.2.1->google-auth<3,>=1.6.3->tensorboard>=2.2.0->pytorch-lightning) (0.4.8)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning) (3.0.4)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning) (1.24.3)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning) (2.10)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning) (2021.10.8)\n",
-            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard>=2.2.0->pytorch-lightning) (3.2.0)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.7/dist-packages (from aiohttp->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning) (6.0.2)\n",
-            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.7/dist-packages (from aiohttp->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning) (1.3.0)\n",
-            "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /usr/local/lib/python3.7/dist-packages (from aiohttp->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning) (4.0.2)\n",
-            "Requirement already satisfied: charset-normalizer<3.0,>=2.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning) (2.0.12)\n",
-            "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.7/dist-packages (from aiohttp->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning) (1.2.0)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning) (21.4.0)\n",
-            "Requirement already satisfied: asynctest==0.13.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning) (0.13.0)\n",
-            "Requirement already satisfied: yarl<2.0,>=1.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch-lightning) (1.7.2)\n"
-          ]
-        }
-      ],
-      "source": [
-        "!pip install pytorch-lightning"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": null,
       "metadata": {
         "id": "34rUKUc8eQ-M"
       },
@@ -141,7 +65,8 @@
         "import torchaudio\n",
         "import torchaudio.transforms as T\n",
         "import torch.utils.data as data\n",
-        "import pytorch_lightning as pl"
+        "import pytorch_lightning as pl\n",
+        "import torchmetrics"
       ]
     },
     {
@@ -155,20 +80,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": null,
       "metadata": {
         "id": "DoFuJgyMP_X4"
       },
       "outputs": [],
       "source": [
-        "#Output: tensor\n",
-        "import matplotlib.pyplot as plt\n",
-        "import math\n",
-        "import random\n",
-        "import torch\n",
-        "import torchaudio\n",
-        "from torchaudio import transforms\n",
-        "\n",
         "class AudioUtil():\n",
         "    @staticmethod\n",
         "    def open(audio_file):\n",
@@ -305,42 +222,9 @@
         "def print_spectrogram(tensor_input):\n",
         "  #time vs amplitude\n",
         "  two_d_spec = tensor_input[0]\n",
-        "  return plt.imshow(two_d_spec.permute(0,1))\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "84zXhG71Djw-"
-      },
-      "source": [
-        "# Viewing dataset and Obtaining Dataloader"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 109,
-      "metadata": {
-        "id": "tUS8sLrcawQt"
-      },
-      "outputs": [],
-      "source": [
-        "##############################\n",
-        "###  Parameters to change  ###\n",
-        "##############################\n",
+        "  return plt.imshow(two_d_spec.permute(0,1))\n",
         "\n",
-        "# Put your preprocessing functions here\n",
-        "PREPROCESSOR = spec_from_aud\n",
-        "\n",
-        "BATCH_SIZE = 1  # Default 64\n",
-        "# If we were to have variable input length, keep batch_size at 1 or implement collate_fn()\n",
-        "\n",
-        "# This cuts the dataset down to have faster iterations during prototyping\n",
-        "REDUCED_DATASET = True\n",
-        "\n",
-        "num_workers = 4\n",
-        "# Need to experiment in this parameter.\n",
-        "# Colab gives 2 CPU cores."
+        "PREPROCESSOR = spec_from_aud"
       ]
     },
     {
@@ -354,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -397,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": null,
       "metadata": {
         "id": "8BRee32EViH6"
       },
@@ -443,15 +327,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": null,
       "metadata": {
         "id": "_TF2lD6kvxSj"
       },
       "outputs": [],
       "source": [
-        "import pytorch_lightning as pl\n",
-        "import torchmetrics\n",
-        "\n",
         "class LightningModel(pl.LightningModule):\n",
         "    def __init__(self, model, learning_rate=1e-3, loss_function=F.nll_loss, optimizer=torch.optim.Adam, weight_decay=1e-6):\n",
         "        super().__init__()\n",
@@ -531,7 +412,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -584,7 +465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -658,21 +539,16 @@
       "source": [
         "# set up microphone audio recorder\n",
         "\n",
-        "!sudo apt install ffmpeg\n",
-        "!pip install torchaudio ipywebrtc notebook\n",
         "!jupyter nbextension enable --py widgetsnbextension\n",
         "\n",
         "from ipywebrtc import AudioRecorder, CameraStream\n",
         "import torchaudio\n",
-        "from IPython.display import Audio\n",
-        "\n",
-        "from google.colab import output\n",
-        "output.enable_custom_widget_manager()"
+        "from IPython.display import Audio"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": null,
       "metadata": {
         "id": "wfCWwdK5qNWv"
       },
@@ -695,7 +571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -744,7 +620,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": null,
       "metadata": {
         "id": "iT7itfSLqvw9"
       },
@@ -752,15 +628,20 @@
       "source": [
         "# convert audio recording into .wav\n",
         "\n",
+        "!wget https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-amd64-static.tar.xz\n",
+        "!tar xJf ffmpeg-release-amd64-static.tar.xz\n",
+        "\n",
         "with open('recording.webm', 'wb') as f:\n",
         "    f.write(recorder.audio.value)\n",
-        "!ffmpeg -i recording.webm -ac 1 -f wav file.wav -y -hide_banner -loglevel panic\n",
-        "sig, sr = torchaudio.load(\"file.wav\") # converted audio is saved as file.wav"
+        "!ffmpeg-5.0.1-amd64-static/ffmpeg -i recording.webm -ac 1 -f wav file.wav -y -hide_banner -loglevel panic\n",
+        "sig, sr = torchaudio.load(\"file.wav\") # converted audio is saved as file.wav\n",
+        "print(sig.shape)\n",
+        "Audio(data=sig, rate=sr)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -801,7 +682,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -841,7 +722,8 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.9.1"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
