--- a/Project_Code_for_GUI.ipynb
+++ b/Project_Code_for_GUI.ipynb
@@ -21,6 +21,7 @@
       },
       "outputs": [],
       "source": [
+        "# check if model file is in directory\n",
         "!ls"
       ]
     },
