Update GUI file

--- a/Project_Code_for_GUI.ipynb
+++ b/Project_Code_for_GUI.ipynb
@@ -12,6 +12,17 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# install dependencies \n",
+        "\n",
+        "pip install -r packages.txt"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
