Add instructions for running GUI code

--- a/Project_Code_for_GUI.ipynb
+++ b/Project_Code_for_GUI.ipynb
@@ -2,11 +2,25 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# **Welcome to our voice classification by age model**\n",
+        "Let our trained CNN model guess your age from your voice! \n",
+        "\n",
+        "To begin, select **Run All Cells** to set up the environment, functions, and load our PyTorch model\n",
+        "\n",
+        "Next, head to the **'Record your audio here!' section** of the notebook to record your audio using the AudioRecorder interface\n",
+        "\n",
+        "Then, continue running the rest of the cells to receive your age prediction :)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "PrqRK8C8Sz-m"
       },
       "source": [
-        "# Setting up the environment"
+        "## Setting up the environment"
       ]
     },
     {
@@ -16,8 +30,7 @@
       "outputs": [],
       "source": [
         "# install dependencies \n",
-        "\n",
-        "pip install -r packages.txt"
+        "!pip install -r packages.txt"
       ]
     },
     {
@@ -54,7 +67,7 @@
         "id": "tigPi8LPeMsX"
       },
       "source": [
-        "## Import Packages"
+        "### Import Packages"
       ]
     },
     {
@@ -87,7 +100,7 @@
         "id": "qa5-A39G1ehk"
       },
       "source": [
-        "# Audio preprocessing & mel spectrogram"
+        "## Audio preprocessing & mel spectrogram"
       ]
     },
     {
@@ -245,7 +258,7 @@
         "id": "wlFu63MhVlfW"
       },
       "source": [
-        "# Model definition"
+        "## Model definition"
       ]
     },
     {
@@ -410,7 +423,7 @@
         "id": "I9m087-HuKiX"
       },
       "source": [
-        "# Load model"
+        "## Load model"
       ]
     },
     {
@@ -460,7 +473,7 @@
         "model = LightningModel(CustomModel(), learning_rate=learning_rate, loss_function=loss_function, optimizer=optimizer)\n",
         "\n",
         "# code for loading checkpoint file\n",
-        "checkpoint = torch.load(model_path)\n",
+        "checkpoint = torch.load(model_path, map_location=torch.device('cpu'))\n",
         "model.load_state_dict(checkpoint['state_dict'])\n",
         "\n",
         "print(model)"
@@ -472,7 +485,7 @@
         "id": "0bJTNqqerBLN"
       },
       "source": [
-        "# Let the model guess your age!"
+        "## Let the model guess your age!"
       ]
     },
     {
@@ -578,6 +591,8 @@
         "id": "YcBePRwGYx6o"
       },
       "source": [
+        "# **Record your audio here!**\n",
+        "\n",
         "Click on the dot button to start recording, and click on it again to stop recording"
       ]
     },
@@ -638,7 +653,7 @@
       },
       "outputs": [],
       "source": [
-        "# convert audio recording into .wav\n",
+        "# convert audio recording into .wav, here we play the .wav audio to ensure that it has been converted successfully\n",
         "\n",
         "!wget https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-amd64-static.tar.xz\n",
         "!tar xJf ffmpeg-release-amd64-static.tar.xz\n",
